#IORG-193 Fix overflowing text.

--- a/themes/fb-internetorg/_static/src/assets/scss/objects/module/_transformBlock.scss
+++ b/themes/fb-internetorg/_static/src/assets/scss/objects/module/_transformBlock.scss
@@ -45,6 +45,7 @@
 .transformBlock-stmnt-item {
     position: absolute;
     opacity: 0;
+    max-width: 100%;
 }
 
 .transformBlock-stmnt-item:nth-child(1) {
