--- a/themes/fb-internetorg/_static/src/assets/scss/objects/typography/_hdg.scss
+++ b/themes/fb-internetorg/_static/src/assets/scss/objects/typography/_hdg.scss
@@ -71,7 +71,7 @@
 .mix-hdg_gray 	{ color: $CLR_GRAY; }
 .mix-hdg_italic { font-style: italic; }
 .mix-hdg_bold   { font-weight: 700; }
-.mix-hdg_splash { color: $CLR_WHITE; }
+.mix-hdg_splash { color: $CLR_WHITE; word-wrap: break-word; }
 .mix-hdg_centerInMobile { text-align: center; }
 .mix-hdg_light { font-weight: 400; }
 
@@ -190,11 +190,11 @@
 }
 
 
-[lang="ar"], 
+[lang="ar"],
 [lang="ur"] {
     .hdg {
         @include font(SERIF_MED);
-    }   
+    }
 
 }
 
